; ModuleID = '/home/carl/AnghaBench/8cc/extr_lex.c_skip_space.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_lex.c_skip_space.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @skip_space to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @skip_space() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 (...) @do_skip_space()
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %11

5:                                                ; preds = %0
  br label %6

6:                                                ; preds = %9, %5
  %7 = call i64 (...) @do_skip_space()
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %6
  br label %6

10:                                               ; preds = %6
  store i32 1, i32* %1, align 4
  br label %11

11:                                               ; preds = %10, %4
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i64 @do_skip_space(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
